update root url

--- a/guide/index.html
+++ b/guide/index.html
@@ -24,7 +24,7 @@
             <div class="css-menu-bar">
                 <span class="st-menu"><a href="/">메뉴로 돌아가기 [Back to Menu]</a></span>
                 <br><br>
-                <span class="st-credits"><a href="" target="_blank">(링크) 모드 설명 [Mod Explanation]</a></span>
+                <span class="st-credits"><a href="alert(`곧 추가 예정입니다.`)" target="_blank">(링크) 모드 설명 [Mod Explanation]</a></span>
             </div>
         </div>
     </div>
