--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div class="css-menu-bar">
                 <span class="st-menu"><a href="/">메뉴 [Menu]</a></span>
                 <br><br>
-                <span class="st-dl"><a href="/downloads">다운로드 [Downloads]</a></span>
+                <span class="st-dl"><a href="./downloads">다운로드 [Downloads]</a></span>
                 <br><br>
-                <span class="st-credits"><a href="/guide">사용법 [Guide]</a></span>
+                <span class="st-credits"><a href="./guide">사용법 [Guide]</a></span>
             </div>
         </div>
     </div>
