update html url

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -22,7 +22,7 @@
                 <span>가지의 모드들</span>
             </div>
             <div class="css-menu-bar">
-                <span class="st-menu"><a href="/">메뉴로 돌아가기 [Back to Menu]</a></span>
+                <span class="st-menu"><a href="/minecraft-modpacks">메뉴로 돌아가기 [Back to Menu]</a></span>
                 <br><br>
                 <span class="st-dl"><a href="./downloads/types">모드 다운로드 [Mod Download]</a></span>
                 <br><br>
