--- a/downloads/types/index.html
+++ b/downloads/types/index.html
@@ -22,7 +22,7 @@
                 <span>다수 포함</span>
             </div>
             <div class="css-menu-bar">
-                <span class="st-menu"><a href="/">메뉴로 돌아가기 [Back to Menu]</a></span>
+                <span class="st-menu"><a href="/minecraft-modpacks">메뉴로 돌아가기 [Back to Menu]</a></span>
                 <br><br>
                 <span class="st-ds">
                     아무 생각 하기 싫으신가요? 그렇다면 이 팩으로 간단하게 해결하세요!
