--- a/guide/index.html
+++ b/guide/index.html
@@ -22,7 +22,7 @@
                 <span>가이드</span>
             </div>
             <div class="css-menu-bar">
-                <span class="st-menu"><a href="/">메뉴로 돌아가기 [Back to Menu]</a></span>
+                <span class="st-menu"><a href="/minecraft-modpacks">메뉴로 돌아가기 [Back to Menu]</a></span>
                 <br><br>
                 <span class="st-credits"><a href="alert(`곧 추가 예정입니다.`)" target="_blank">(링크) 모드 설명 [Mod Explanation]</a></span>
             </div>
