--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span>가지의 모드들</span>
             </div>
             <div class="css-menu-bar">
-                <span class="st-menu"><a href="/">메뉴 [Menu]</a></span>
+                <span class="st-menu"><a href="/minecraft-modpacks">메뉴 [Menu]</a></span>
                 <br><br>
                 <span class="st-dl"><a href="./downloads">다운로드 [Downloads]</a></span>
                 <br><br>
