update html url

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -24,9 +24,9 @@
             <div class="css-menu-bar">
                 <span class="st-menu"><a href="/minecraft-modpacks">메뉴로 돌아가기 [Back to Menu]</a></span>
                 <br><br>
-                <span class="st-dl"><a href="./downloads/types">모드 다운로드 [Mod Download]</a></span>
+                <span class="st-dl"><a href="./types">모드 다운로드 [Mod Download]</a></span>
                 <br><br>
-                <span class="st-credits"><a href="./guide">설명서 [Guide]</a></span>
+                <span class="st-credits"><a href="alert(`준비 중입니다.`)">설명서 [Guide]</a></span>
             </div>
         </div>
     </div>
