change file hosting discord to google drive

--- a/downloads/types/index.html
+++ b/downloads/types/index.html
@@ -30,7 +30,7 @@
                     <sp an class="st-ds" style="font-size: 20px;">보통 초보자에게 추천됩니다. 이 팩은 모든 "최적화·편의성·호환성" 모드들을 포함하고 있습니다.</span>
                 </span>
                 <br>
-                <span class="st-dl"><a href="https://cdn.discordapp.com/attachments/1291063283956060175/1291414801133735956/FA_II_2024_Full_Pack.zip?ex=67000341&is=66feb1c1&hm=2e0e5353feba3b151991e6385585340cb42ded6c8478c873b5fff34d192b8ae3&">풀 팩 [Full Pack]</a></span>
+                <span class="st-dl"><a href="https://drive.google.com/uc?export=download&id=1RV8pm4xZSqirudTYBsJPIWhwAPo5lOCg">풀 팩 [Full Pack]</a></span>
                 <br><br>
                 <span class="st-ds">
                     모드에 대한 어느 정도의 지식이 있나요? 이 팩으로 커스텀하세요!
@@ -38,7 +38,7 @@
                     <span class="st-ds" style="font-size: 20px;">모드의 구조를 아는 경우 추천드립니다. 이 팩은 "모든" 모드들이 카테고리별로 나눠져 있습니다.</span>
                 </span>
                 <br>
-                <span class="st-dl"><a href="https://cdn.discordapp.com/attachments/1291063283956060175/1291064202752168027/FA_II_2024_CS_Pack.zip?ex=66febcbc&is=66fd6b3c&hm=e65e3f3c1826e2d502d7cd961356fd3b978bf693c9efef165e7b5b322db5d7ae&">C/S 팩 [Customizable]</a></span>
+                <span class="st-dl"><a href="https://drive.google.com/uc?export=download&id=1rj1wDl-RZFwSXpeh21kZ0O7-Sdb4_74r">C/S 팩 [Customizable]</a></span>
             </div>
         </div>
     </div>
