add auto installation

--- a/guide/index.html
+++ b/guide/index.html
@@ -15,16 +15,26 @@
     <div class="css-foreground-content">
         <div class="css-page-1">
             <div class="css-main-title" id="mainMenu">
-                <span class="css-wb-title mc-fun">쉽게 따라하는</span>
+                <span class="css-wb-title mc-fun">10배는 간편해진</span>
                 <span>재경재경 모드팩</span>
                 <span style="line-height: 170%;"><br></span>
-                <span class="css-wb-title mc-mods">적용법</span>
-                <span>가이드</span>
+                <span class="css-wb-title mc-mods">자동설치</span>
+                <span>프로그램</span>
             </div>
             <div class="css-menu-bar">
                 <span class="st-menu"><a href="/minecraft-modpacks">메뉴로 돌아가기 [Back to Menu]</a></span>
                 <br><br>
-                <span class="st-credits"><a href="alert(`곧 추가 예정입니다.`)" target="_blank">(링크) 모드 설명 [Mod Explanation]</a></span>
+                <span class="st-novirus">이 파일에는 바이러스가 전혀 들어있지 않습니다.</span>
+                <br>
+                <span class="st-novirus">바이러스가 탐지 경고는 모두 오진이니 무시하고 사용하세요.</span>
+                <br>
+                <span class="st-novirus">제작자(손재경)가 직접 만든 100% 수제 프로그램입니다.</span>
+                <br>
+                <span class="st-novirus">바이러스가 없다고 100% 약속합니다.</span>
+                <br>
+                <span class="st-novirus">다운로드 후 압축을 풀어주세요. exe 실행 중 파란 경고 창이 뜬다면 추가정보를 클릭 -> 아래에 실행 버튼을 눌러주시길 바랍니다.</span>
+                <br>
+                <span class="st-program"><a href="https://www.dropbox.com/scl/fi/ckobzxi4f6ob96q4y8k70/v1.0.1.zip?rlkey=8y8n560ju2go5xmogitxkm46w&st=w9vyxu38&raw=1">자동설치 프로그램 다운로드 (v1.0.1)</a></span>
             </div>
         </div>
     </div>
