--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <br><br>
                 <span class="st-dl"><a href="./downloads">다운로드 [Downloads]</a></span>
                 <br><br>
-                <span class="st-credits"><a href="./guide">사용법 [Guide]</a></span>
+                <span class="st-credits"><a href="./guide">간편설치 [Simplified Installation]</a></span>
             </div>
         </div>
     </div>
