--- a/downloads/types/index.html
+++ b/downloads/types/index.html
@@ -24,13 +24,16 @@
             <div class="css-menu-bar">
                 <span class="st-menu"><a href="/minecraft-modpacks">메뉴로 돌아가기 [Back to Menu]</a></span>
                 <br><br>
+
+                <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+                <div style="margin-bottom: 15px;"><span>2025 F&A III (출시예정)</span></div>
                 <span class="st-ds">
                     아무 생각 하기 싫으신가요? 그렇다면 이 팩으로 간단하게 해결하세요!
                     <br>
                     <sp an class="st-ds" style="font-size: 20px;">보통 초보자에게 추천됩니다. 이 팩은 모든 "최적화·편의성·호환성" 모드들을 포함하고 있습니다.</span>
                 </span>
                 <br>
-                <span class="st-dl"><a href="https://drive.google.com/uc?export=download&id=1RV8pm4xZSqirudTYBsJPIWhwAPo5lOCg">풀 팩 [Full Pack]</a></span>
+                <span class="st-dl"><a href="javascript:void(0)">풀 팩 [Full Pack]</a></span>
                 <br><br>
                 <span class="st-ds">
                     모드에 대한 어느 정도의 지식이 있나요? 이 팩으로 커스텀하세요!
@@ -38,7 +41,17 @@
                     <span class="st-ds" style="font-size: 20px;">모드의 구조를 아는 경우 추천드립니다. 이 팩은 "모든" 모드들이 카테고리별로 나눠져 있습니다.</span>
                 </span>
                 <br>
-                <span class="st-dl"><a href="https://drive.google.com/uc?export=download&id=1rj1wDl-RZFwSXpeh21kZ0O7-Sdb4_74r">C/S 팩 [Customizable]</a></span>
+                <span class="st-dl"><a href="javascript:void(0)">C/S 팩 [Customizable]</a></span>
+
+                <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+                <div class="css-mods-divide-line"><span>하늘섬 총모드</span></div>
+                <span class="st-dl"><a href="javascript:void(0)">풀 팩 [Full Pack]</a></span>
+                <span class="st-dl"><a href="javascript:void(0)">C/S 팩 [Customizable]</a></span>
+
+                <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+                <div class="css-mods-divide-line"><span>추가예정 #1</span></div>
+                <span class="st-dl"><a href="javascript:void(0)">풀 팩 [Full Pack]</a></span>
+                <span class="st-dl"><a href="javascript:void(0)">C/S 팩 [Customizable]</a></span>
             </div>
         </div>
     </div>
