--- a/downloads/index.html
+++ b/downloads/index.html
@@ -26,7 +26,7 @@
                 <br><br>
                 <span class="st-dl"><a href="./types">모드 다운로드 [Mod Download]</a></span>
                 <br><br>
-                <span class="st-credits"><a href="alert(`준비 중입니다.`)">설명서 [Guide]</a></span>
+                <span class="st-credits"><a href="javascript:alert(`준비 중입니다.`)">설명서 [Guide]</a></span>
             </div>
         </div>
     </div>
