remove c/s pack from skygun modpack

--- a/downloads/types/index.html
+++ b/downloads/types/index.html
@@ -46,7 +46,8 @@
                 <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
                 <div class="css-mods-divide-line"><span>하늘섬 총모드</span></div>
                 <span class="st-dl"><a href="javascript:void(0)">풀 팩 [Full Pack]</a></span>
-                <span class="st-dl"><a href="javascript:void(0)">C/S 팩 [Customizable]</a></span>
+                <!-- <span class="st-dl"><a href="javascript:void(0)">C/S 팩 [Customizable]</a></span> -->
+                <!-- 이 모드팩은 CS팩이 지원되지 않음 -->
 
                 <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
                 <div class="css-mods-divide-line"><span>추가예정 #1</span></div>
