update exe version

--- a/guide/index.html
+++ b/guide/index.html
@@ -34,7 +34,7 @@
                 <br>
                 <span class="st-novirus">다운로드 후 압축을 풀어주세요. exe 실행 중 파란 경고 창이 뜬다면 추가정보를 클릭 -> 아래에 실행 버튼을 눌러주시길 바랍니다.</span>
                 <br>
-                <span class="st-program"><a href="https://www.dropbox.com/scl/fi/ckobzxi4f6ob96q4y8k70/v1.0.1.zip?rlkey=8y8n560ju2go5xmogitxkm46w&st=w9vyxu38&raw=1">자동설치 프로그램 다운로드 (v1.0.1)</a></span>
+                <span class="st-program"><a href="https://www.dropbox.com/scl/fi/8cd4dpgrhcnz7fe8gn6ct/v1.0.2.zip?rlkey=gklqdh5nogxoo3zed5xtqzn7c&st=r24qrzmw&raw=1">자동설치 프로그램 다운로드 (v1.0.2)</a></span>
             </div>
         </div>
     </div>
