--- a/guide/index.html
+++ b/guide/index.html
@@ -34,7 +34,7 @@
                 <br>
                 <span class="st-novirus">다운로드 후 압축을 풀어주세요. exe 실행 중 파란 경고 창이 뜬다면 추가정보를 클릭 -> 아래에 실행 버튼을 눌러주시길 바랍니다.</span>
                 <br>
-                <span class="st-program"><a href="https://github.com/ehfthxqlqla/minecraft-modpacks/releases/download/automod-v2.0.0/jgjg-automod-v2.0.0.exe">자동설치 프로그램 다운로드 (v2.0.0) **NEW!**</a></span>
+                <span class="st-program"><a href="https://github.com/ehfthxqlqla/minecraft-modpacks/releases/download/automod-v2.0.1/jgjg-automod-v2.0.1.exe">자동설치 프로그램 다운로드 (v2.0.1)</a></span>
             </div>
         </div>
     </div>
